--- a/src/app/ui/ui.component.css
+++ b/src/app/ui/ui.component.css
@@ -30,19 +30,14 @@ body {
     font-size: 22px;
   }
   
-  .login-box label {
-    margin: 0;
-    padding: 0;
-    font-weight: bold;
-    display: block;
-  }
+ 
   
   .login-box input {
     width: 100%;
     margin-bottom: 20px;
   }
   
-  .login-box input[type="number"], .login-box input[type="number"] {
+  .login-box input[type="number"], .login-box input[type="text"] {
     border: none;
     border-bottom: 1px solid #fff;
     background: transparent;
@@ -68,13 +63,4 @@ body {
     color: #000;
   }
   
-  .login-box a {
-    text-decoration: none;
-    font-size: 12px;
-    line-height: 20px;
-    color: rgb(0, 0, 0);
-  }
   
-  .login-box a:hover {
-    color: #fff;
-  }
